# vkr_passenger_flow_counter

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.edge  EDGE_DEPLOY.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  demo.py  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements-edge.txt  requirements.txt
app/: config.py  main.py
app/api/: camera_routes.py  routes.py  schemas.py  stats_routes.py
app/core/: camera_manager.py  counter.py  detector.py  detector_onnx.py  detector_rknn.py  pipeline.py  tracker.py  tracker_osnet.py
app/static/: calibrate.html
app/storage/: camera_config.py  db.py
models/: botsort_mot20_idf1.json  bytetrack_best_params.json
notebooks/: 01_dataset_prep.ipynb  02_train_detection.ipynb  03_tracker_tuning_eval.ipynb  04_metrics_acceptance.ipynb  data_preparation.ipynb  detector_training.ipynb  tracker_desktop_botsort.ipynb  tracker_edge_bytetrack.ipynb
scripts/: export.py
tests/: conftest.py  test_key_diploma.py
