[project]
name = "vkr-passenger-counter"
version = "0.1.0"
description = "Система автоматического подсчёта пассажиропотока"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.0",
    "supervision>=0.27.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.0.0",
    "opencv-python-headless>=4.13.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
