[project]
name = "vkr-passenger-counter"
version = "0.2.0"
description = "Система автоматического подсчёта пассажиропотока"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "ultralytics>=8.4.0",
    "supervision>=0.27.0",        
    "boxmot==13.0.17",            
    "onnxruntime>=1.26.0",        
    "numpy>=1.26.0",
    "opencv-python-headless>=4.13.0",
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.26",
    "pandas>=2.2.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "motmetrics>=1.4.0",          
    "onnx>=1.21.0",               
    "onnxslim>=0.1.40",           
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",          
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
